L4-L5-march21-28/lab5.y
%start rhyme
%token DING DONG DELL

%{
#include <stdio.h>
%}

%%
rhyme : sound place {printf("Rhyme\n");}
        ;

sound : DING DONG {printf("Sound\n");}
        ;

place : DELL {printf("Place\n");}
        ;

%%
int yyerror(char* s){
    printf("%s\n", s);
}

int main(int argc, char* argv[]){
    yyparse();
    return 0;
}
